footer alignment fix in mobile

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -64,7 +64,7 @@ section {
 @media only screen and (max-width: 576px) {
   footer {
     padding: 10px;
-    height: 55px;
+    height: 64px;
   } 
   footer > .row > div {
     text-align: center;
@@ -73,6 +73,6 @@ section {
     margin-bottom: 5px;
   }
   .home-section {
-    height: calc(100vh - 55px);
+    height: calc(100vh - 64px);
   }
 }
